@@ -13,10 +13,8 @@ CONFIG_KERNEL_LMA=0x20008000
 
 CONFIG_MEM_BANK0_START =0x20000000
 CONFIG_MEM_BANK0_LENGTH=0x10000000
-# There should be two BANKS of SDRAM on this board.  Initialization of
-# the second one fails.
-#CONFIG_MEM_BANK1_START =0x30000000
-#CONFIG_MEM_BANK1_LENGTH=0x10000000
+CONFIG_MEM_BANK1_START =0x30000000
+CONFIG_MEM_BANK1_LENGTH=0x10000000
 
 # LH28F320BFE, 32M (2Mx16)
 CONFIG_NOR_BUSWIDTH=16
@@ -32,6 +30,9 @@ CONFIG_SPINNER=y
 
 # Test code for the audio codec
 #CONFIG_CODEC=y
+
+# Test code for the adc
+CONFIG_ADC=y
 
 #CONFIG_CMD_CHECKSUM=y
 CONFIG_CMD_COPY=y
