@@ -13,8 +13,8 @@ CONFIG_KERNEL_LMA=0x20008000
 
 CONFIG_MEM_BANK0_START=0x20000000
 CONFIG_MEM_BANK0_LENGTH=0x10000000
-CONFIG_MEM_BANK1_START=0x30000000
-CONFIG_MEM_BANK1_LENGTH=0x10000000
+#CONFIG_MEM_BANK1_START=0x30000000
+#CONFIG_MEM_BANK1_LENGTH=0x10000000
 
 # LH28F128BFE, 32M (2Mx16)
 CONFIG_NOR_BUSWIDTH=16
