@@ -1,5 +1,7 @@
 2005-01-26  Marc Singer  <elf@buici.com>
 
+	* src/mach-lh7952x/adc.c (cmd_adc): Basic adc code working.
+
 	* src/apex/console-printf.c (printf): Automatic insertion of
 	carriage-returns before newlines.
  
